--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -23,7 +23,7 @@
                                required="required"
                                class="form-control">
                     </div>
-                    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+                    {#<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">#}
                     {% if error %}
                         <div class="invalid-feedback d-block mb-3">
                             <span class="form-error-icon badge badge-danger text-uppercase">Error</span>
